# eli-domain-monitor

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml.example  deploy.sh  domain_monitor.py  pyproject.toml  run.sh
.github/workflows/: test.yml
src/: config.py  database.py  domain_checker.py  domain_extractor.py  domain_info.py  email_sender.py
test/: test_domain_monitor.py
